add jump to index function

--- a/log_table.html
+++ b/log_table.html
@@ -11,6 +11,11 @@
         <h1 class="log-header">Log Viewer</h1>
         
 
+        <div class="jump-controls">
+            <input type="number" id="rowIndexInput" placeholder="Enter row number (0-99999)" min="0" max="99999">
+            <button id="jumpToRowBtn">Jump to Row</button>
+        </div>
+
         <div class="table-wrapper" id="tableWrapper">
             <div class="table-container">
                 <div class="table-header">
